--- a/web/package.json
+++ b/web/package.json
@@ -29,7 +29,7 @@
     "workbox-streams": "^6.5.3"
   },
   "scripts": {
-    "start": "set \"HTTPS=true\" && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "serve-build": "npm run build && npx serve -s build"
   },
